# Paperstack

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: install.sh
src/paperstack/: __init__.py  __main__.py
src/paperstack/cli/: __init__.py  app.py  browser.py  repl.py
src/paperstack/cli/commands/: __init__.py  add.py  done.py  prefs.py  reading.py  search.py  view.py
src/paperstack/config/: __init__.py  settings.py
src/paperstack/core/: __init__.py  schemas.py
src/paperstack/db/: __init__.py  models.py  repository.py  session.py
src/paperstack/embeddings/: __init__.py  encoder.py  search.py
src/paperstack/llm/: __init__.py  claude_client.py  claude_code_client.py
src/paperstack/memory/: __init__.py  manager.py
src/paperstack/metadata/: __init__.py  arxiv_client.py  crossref_client.py  extractor.py  semantic_scholar.py
src/paperstack/search/: __init__.py  aggregator.py
src/paperstack/storage/: __init__.py  base.py  gdrive.py  local.py
src/paperstack/viewer/: __init__.py  server.py
src/paperstack/viewer/static/css/: viewer.css
src/paperstack/viewer/static/js/: viewer.js
src/paperstack/viewer/templates/: viewer.html
tests/: __init__.py  conftest.py  test_config.py  test_db.py  test_metadata.py
